# page-share

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: api.py  app.py  config.py  crud.py  db.py  dependencies.py  frontend.py  logger.py  models.py  schemes.py
app/static/css/: style.css
app/static/js/: index.js  page.js
app/templates/: index.html  page-not-found.html  page.html
configuration/: .env  .env.test
migrations/: env.py
migrations/versions/: f1919e7b4c85_init.py
tests/: conftest.py
tests/api/: test_page.py
tests/crud/: test_read_page.py  test_read_page_content.py
