[tool.poetry]
name = "page-share"
version = "0.1.0"
description = ""
authors = ["batir <batir.vik@gmail.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pyright = "^1.1.378"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.32"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
alembic = "^1.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
